Sửa : Mỗi dịch vụ sử dụng gắn liền với 1 user để có thể in hóa đơn theo user

--- a/BussinessLogic/BussinessLogic.csproj
+++ b/BussinessLogic/BussinessLogic.csproj
@@ -43,6 +43,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.XtraEditors.v13.1, Version=13.1.8.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="EntityFramework">
       <HintPath>..\Library\Packet\EntityFramework.dll</HintPath>
     </Reference>
